<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dane_auta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kamil.wypozyczalniasamochodow.MenuUzytkownika.DaneAuta"
    tools:showIn="@layout/activity_dane_auta">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
       <TextView
           android:layout_width="55dp"
           android:textSize="15dp"
           android:layout_height="wrap_content"
           android:text="@string/TextView_marka"
           android:textStyle="bold"
           android:textColor="@color/colorPrimary"
           android:id="@+id/textViewMarka"
           />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="tumarka"
               android:textSize="15dp"
               android:id="@+id/textViewWypiszMarke"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
       <TextView
           android:layout_width="55dp"
           android:layout_height="wrap_content"
           android:text="@string/TextView_model"
           android:textStyle="bold"
           android:textSize="15dp"
           android:textColor="@color/colorPrimary"
           android:id="@+id/textViewModel"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="tuwpiszmodel"
           android:textSize="15dp"
           android:id="@+id/textViewWypiszModel"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="40dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_rok"
               android:textStyle="bold"
               android:textSize="15dp"
               android:textColor="@color/colorPrimary"
               android:id="@+id/textViewRok"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="tuwpiszrok"
               android:textSize="15dp"
               android:id="@+id/textViewWypiszRok"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="85dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_pojemnosc"
               android:textSize="15dp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimary"
               android:id="@+id/textViewPojemnosc"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="15dp"
               android:text="1900"

               android:id="@+id/textViewWypiszPojemnosc"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:textSize="15dp"
               android:text="@string/TextView_pojemnosc_cm"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="40dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_moc"
               android:textSize="15dp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimary"
               android:id="@+id/textViewMoc"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="300"
               android:textSize="15dp"
               android:id="@+id/textViewWypiszMoc"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:text="@string/TextView_moc_km"
               android:textSize="15dp"
              />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_wyposazenie"
               android:textSize="15dp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimary"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="wyposazenie"
               android:textSize="15dp"
               android:id="@+id/textViewWyposazenie"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="95dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_opis_modelu"
               android:textSize="15dp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimary"
                />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="tuwpiszopismodelu"
               android:textSize="15dp"
               android:id="@+id/textViewWypiszOpisModelu"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">
           <TextView
               android:layout_width="45dp"
               android:layout_height="wrap_content"
               android:text="@string/TextView_cena"
               android:textSize="15dp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimary"
               android:id="@+id/textViewCena"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="100"
               android:textSize="15dp"
               android:id="@+id/textViewWypiszCena"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:text="@string/TextView_cena_zl"
               android:textSize="15dp"
               />
       </LinearLayout>
       <Button
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:id="@+id/buttonPrzejdzDoRezerwacji"
           android:text="@string/button_rezerwacja"
           android:layout_gravity="center"
           android:layout_marginTop="40dp"
           android:background="@drawable/button_round2" />
   </LinearLayout>



</RelativeLayout>
