<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/TextView_marka"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="markacos"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/markaTextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/TextView_model"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="modelcos"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/modelTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/textView_Imie"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="iMiecos"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/ImieTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:text="@string/textView_Nazwisko"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="Nazwiskocos"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/NazwiskoTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/textView_Ulica"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="Ulicacos"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/UlicaTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/textView_NrDomu"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="nrDomucos"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/nrDomuTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/textView_KodPocztowy"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="kodPocztowycos"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/kodPocztowyTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/textView_Miejscowosc"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="miejscowosccos"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/miejscowoscTextView"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/textView_DataStart"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="DataStartcos"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/DataStartTextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/textView_DataStop"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Datastopcos"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/DataStopTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="45dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/TextView_cena"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textSize="15dp"
            android:id="@+id/TextViewCenaLista"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/TextView_cena_zl"
            android:textSize="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/textView_Status"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Statuscos"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/StatusTextView"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:dividerHeight="5dp"
        android:id="@+id/VievListaView"/>
</LinearLayout>
