<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.kamil.wypozyczalniasamochodow.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/carlogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:hint="@string/loginEditText"
        android:textColorHint="@color/hintcolor"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/loginEditText"
        android:background="@drawable/edittext_round"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:hint="@string/hasloEditText"
        android:textColorHint="@color/hintcolor"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_round"
        android:id="@+id/hasloEditText" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/zalogujButton"
        android:background="@drawable/button_round"
        android:layout_marginTop="390dp"
        android:id="@+id/buttonZaloguj"
        android:width="7dp"
        android:onClick="buttonZalogujClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textSize="20dp"
        android:text="@string/rejestracjaButton"
        android:background="@drawable/button_round2"
        android:layout_marginTop="450dp"
        android:id="@+id/buttonRejestracja"
        android:textColor="@color/black"
        android:onClick="buttonRejestracjaClick" />

</RelativeLayout>
